# fastapi-jsonapi-example-movies-catalog

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
movies-catalog/: .env.template  alembic.ini  app_lifespan.py  create_app.py  main.py
movies-catalog/alembic/: env.py
movies-catalog/alembic/versions/: 2025_03_15_1942-7f2832dcd683_create_movies_table.py  2025_03_15_2037-7d53040d12ae_create_movies_table.py  2025_03_22_1815-372074b6ed46_create_age_rating_table.py  2025_03_22_2026-96530a77d45f_add_age_rating_col_to_movies.py  2025_03_29_2024-22b171e7911e_create_genre_table.py  2025_03_29_2052-18af0240399a_create_movie_genre_association_table.py
movies-catalog/api/: __init__.py  build_jsonapi_app.py  generic_view.py
movies-catalog/core/: config.py
movies-catalog/models/: __init__.py  age_rating.py  db_helper.py  genre.py  move_genre.py  movie.py
movies-catalog/models/mixins/: __init__.py
movies-catalog/schemas/: __init__.py  age_rating.py  genre.py  movie.py
