[project]
name = "example-fastapi-jsonapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "fastapi-jsonapi>=3.0.0",
    "pydantic>=2.10.6",
    "sqlalchemy[asyncio]>=2.0.39",
]
