[project]
name = "example-fastapi-jsonapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "fastapi-jsonapi>=3.0.0",
    "pydantic>=2.10.6",
    "sqlalchemy[asyncio]>=2.0.39",
    "pydantic-settings>=2.8.1",
    "psycopg[binary]>=3.2.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
